syntax = "proto3";

package common.v1;

message EmptyRes {}