syntax = "proto3";

package user.sys.v1;

import "auth/token/v1/token.proto";

message LoginReq {
  string identifier = 1;
  string password = 2;
}

message LoginRes {
  auth.token.v1.Token access = 1;
  auth.token.v1.Token refresh = 2;
}

message RegisterReq {
  string username = 1;
  string password = 2;
}

// TODO common empty response
message RegisterRes {}

message BindReq {
  string email = 1;
  string phone = 2;
  string oauth_id = 3;
}

message BindRes {}

service UserService {
  rpc Login(LoginReq) returns (LoginRes) {}
  rpc Register(RegisterReq) returns (RegisterRes) {}
  rpc Bind(BindReq) returns (BindRes) {}
}
